tested logbuddy decorator configuration