@@ -10,6 +10,18 @@ import static org.quackery.run.Runners.run;
 
 import org.quackery.Test;
 
+/**
+ * Logging tests that use logbuddy require those options. They allow logbuddy to read private fields
+ * of classes in java.* package.
+ *
+ * <pre>
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.math=ALL-UNNAMED
+--add-opens=java.base/java.lang.ref=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+ * </pre>
+ */
 public class RunTests {
   public static void main(String[] args) {
     Test test = testEverything();
